--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,11 @@
 services:
   - type: web
-    name: roblox-login-bot
-    env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: bash start.sh
+    name: order-management-app
+    env: node
+    buildCommand: npm install && npm run build
+    startCommand: npm start
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.9.16
-    healthCheckPath: /health
+      - key: NODE_VERSION
+        value: 18.17.0
+    healthCheckPath: /
     autoDeploy: true 
